--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
   db:
     container_name: db
-    image: 'postgres:latest'
+    image: 'postgres:14.8-alpine'
     expose:
       - "5432"
     environment:
