--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,18 @@ services:
 
   db:
     container_name: db
-    image: 'postgres:14.8-alpine'
+    image: 'postgres:latest'
     expose:
       - "5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
+      POSTGRES_DB: db
     networks:
       - app-network
     restart: always
+    volumes:
+      - ./db:/var/lib/postgresql/data
 
 networks:
   app-network:
